@@ -1,7 +1,8 @@
-SDK=/var/theos/sdks/iPhoneOS11.2.sdk
+SDK=~/theos/sdks/iPhoneOS11.2.sdk
+IPHONESDK=/var/theos/sdks/iPhoneOS11.2.sdk
 CC=clang
 CFLAGS=-g -arch arm64 -isysroot $(SDK)
-LDFLAGS=-lreadline7.0 -lhistory7.0 -lncurses -larmadillo -lpcre2-8.0 -fsanitize=address
+LDFLAGS=-arch arm64 -lreadline7.0 -lhistory7.0 -lncurses -larmadillo -lpcre2-8.0 -miphoneos-version-min=12.0 -fsanitize=address -rpath $(IPHONESDK)/usr/lib
 SRC=source
 
 OBJECT_FILES = $(SRC)/argparse.o \
@@ -32,9 +33,18 @@ OBJECT_FILES = $(SRC)/argparse.o \
 
 iosdbg : $(OBJECT_FILES)
 	$(CC) -isysroot $(SDK) $(OBJECT_FILES) $(LDFLAGS) -o iosdbg
+	dsymutil ./iosdbg
 
 $(SRCDIR)/%.o : $(SRCDIR)/%.c $(SRCDIR)/%.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
-clean :
+deploy:
+	make iosdbg
+	scp -P 2222 iosdbg root@localhost:/var/mobile/ios-projects/iosdbg/v2
+	scp -r -P 2222 iosdbg.dSYM root@localhost:/var/mobile/ios-projects/iosdbg/v2
+	ssh -t -p2222 root@localhost 'cd /var/mobile/ios-projects/iosdbg/v2' \
+		'&& ldid -Sent.xml ./iosdbg' \
+		'&& chmod +x ./iosdbg'
+
+clean:
 	rm iosdbg $(OBJECT_FILES)
